# taftoolbox

./: .gitignore  CMakeLists.txt  build-gcc.sh  build-i686-w64-mingw32.sh  compare_assets.cpp  conan_install.bat  conanfile.txt  maptool.cpp
.github/workflows/: build.yml
apps/maptool/: CMakeLists.txt  maptool.cpp
apps/taf-cpp-client/: CMakeLists.txt  ChatChannelWidget.ui  ChatUserWidget.ui  DownloadService.cpp  DownloadService.h  DtoTableModel.h  LogWindow.cpp  LogWindow.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.css  MainWindow.h  MainWindow.ui  NativeTools.h  TafEndpoints.cpp  TafEndpoints.h  TafService.cpp  TafService.h  taf-cpp-client.cpp  taf-cpp-client.qrc  taf-cpp-client.vcxproj.user.in
apps/taf-cpp-client/api/: FeaturedModDto.cpp  FeaturedModDto.h
apps/taf-cpp-client/games/: GameCardDelegate.cpp  GameCardDelegate.h  GameCreateDialog.cpp  GameCreateDialog.h  GameCreateDialog.ui  GameLauncherService.cpp  GameLauncherService.h  GameService.cpp  GameService.h  GamesListModel.cpp  GamesListModel.h  GamesWidget.cpp  GamesWidget.h  GamesWidget.ui  IceAdapterService.cpp  IceAdapterService.h  NewGameInfo.cpp  NewGameInfo.h
apps/taf-cpp-client/maps/: MapPreviewType.cpp  MapPreviewType.h  MapService.cpp  MapService.h
apps/taf-cpp-client/mods/: ModService.cpp  ModService.h
apps/taf-cpp-client/player/: PlayerService.cpp  PlayerService.h  TafLobbyPlayerDto.cpp  TafLobbyPlayerDto.h
apps/taf-cpp-client/preferences/: LoginPreferences.cpp  LoginPreferences.h  PreferencesService.cpp  PreferencesService.h
apps/taf-cpp-client/res.faf-python-client/connectivity/: connectivity.ui
apps/taf-cpp-client/res.faf-python-client/games/: games.ui
apps/taf-cpp-client/ta/: MapTool.cpp  MapTool.h  MapToolDto.cpp  MapToolDto.h
libs/nswf/: README
libs/rwe/: CMakeLists.txt  README  rwe_string.cpp
libs/rwe/hpi/: HpiArchive.cpp  HpiArchive.h
libs/ta/: CMakeLists.txt  hpi.cpp  hpi.h  tdf.cpp  tdf.h
libs/tafclient/: CMakeLists.txt  TafLobbyClient.cpp  TafLobbyClient.h
libs/taflib/: CMakeLists.txt
nswf/: CMakeLists.txt  nswfl_crc32.cpp  nswfl_crc32.h
rwe/: CMakeLists.txt  rwe_string.h
rwe/hpi/: hpi_util.cpp  hpi_util.h
rwe/tnt/: TntArchive.cpp  TntArchive.h
ta/: CMakeLists.txt  hpi.cpp  hpi.h  palette.cpp  palette.h  tdf.cpp  tdf.h
